--- a/estilos.css
+++ b/estilos.css
@@ -104,17 +104,12 @@ p {
     color: #fff;
 }
 
-.octubre {
-    font-family: 'Roboto', sans-serif;
-    margin-bottom: 200px;
-    text-align: right;
-}
 
-#banner {
-    font-family: 'Roboto', sans-serif;
-    background-image: url(./Fotos/Banner.png);
-    background-size: cover;
-    background-position: center;
+#Banner {
+  font-family: 'Roboto', sans-serif;
+  background-size: cover;
+  background-position: center;
+  height: 600px;
 }
 
 .bannerTop {
@@ -125,6 +120,7 @@ p {
     margin-right: 10%;
     text-align: right;
     color:#e4b5b5;
+    height: 600;
 } 
 
 #banner2 {
@@ -134,7 +130,8 @@ p {
   background-position: center;
   height: 650px;/* Ajusta la altura según tus necesidades */
   cursor: pointer; /* Cambia el cursor para indicar que es clicable */
-}
+} 
+
 
 #bannerJeans {
   font-family: 'Roboto', sans-serif;
@@ -168,8 +165,16 @@ p {
   background-image: url(.//Fotos/BannerShorts.jpg);
   background-size: cover;
   background-position: center;
-  height: 600px;
+  height: 500px;
   
+}
+
+#bannerSale {
+  font-family: 'Roboto', sans-serif;
+  background-image: url(./Fotos/Banner2.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 500px;
 }
 
 .bannerMid {
@@ -273,11 +278,11 @@ p {
     gap: 20px;
     justify-content: space-around;
     padding: 40px;
-    background-color: #f8f9fa;
+    background-color: #b88383;
   }
   
   .info-cards .card {
-    background-color: #fff;
+    background-color: #f3dfdf;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -288,6 +293,7 @@ p {
   
   .info-cards .card:hover {
     transform: translateY(-10px);
+    
   }
   
   .info-cards .card i {
@@ -304,6 +310,7 @@ p {
   
   .info-cards .card p {
     color: #666;
+    
   }
 
   .Iconos .info-cards {
@@ -315,20 +322,24 @@ p {
   /*Estilos de tienda*/
 
 .container-items {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   gap:20px;
   background-color: #e4b5b5;
   
 }
 
 .item{
-  border-radius: 50px 0px 50px 0px;
-}
-
-.item{
+  flex: 1 1 calc(25% - 20px); /* 4 columnas */
+  min-width: 200px; 
+  background-color: #e4b5b5;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
   box-shadow: 0 10px 20px rgba(0,0,0, 0.20);
 }
+
+
 
 .info-product{
   padding: 15px 30px;
@@ -339,4 +350,38 @@ p {
   height: 500px;
   object-fit: cover;
   border-radius: 50px 0px 50px 0px;
+}
+/* Sección de reseñas */
+.reviews {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 40px;
+  background-color: #b88383;
+}
+
+/* Estilos para cada reseña */
+.review {
+  background-color: #f3dfdf;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s;
+}
+
+.review h3 {
+  margin-bottom: 10px;
+  color: #333;
+  text-align: center;
+}
+
+.review p {
+  color: #666;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.review:hover {
+  transform: translateY(-10px);
 }
