--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-color: #ee6e73;
+  --secondary-color: #ffffff;
+  --dark-color: #000000;
+  --background-color:#16192a;
+
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f3aeac;
@@ -30,6 +38,16 @@ h3 {
     text-align: left;
 }
 
+h2 {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
 .formulario {
     font-family: 'Roboto', sans-serif;
     padding: 0 30%;
@@ -41,6 +59,42 @@ h3 {
   margin-top: 5%;
   text-align: center;
 }
+
+#carrito {
+  display:inline-block;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+
+  a {
+    border: none;
+    padding: 0.5rem;
+    position: relative;
+  }
+
+  a:hover {
+    border-radius: 50%;
+
+    .count {
+      color:var(--secondary-color);
+      background-color: var(--primary-color);
+      border: 1px solid var(--secondary-color);
+    }
+  }
+  .count {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    font-size: 12px;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    padding: 0.25rem 0.30rem;
+    border: 1px solid var(--primary-color);
+    border-radius: 50%;
+  
+  }
+}
+
 
 .navbar-expand-lg {
     font-family: 'Roboto', sans-serif;
@@ -338,6 +392,16 @@ p {
   
 }
 
+.card{
+  flex: 1 1 calc(25% - 20px); /* 4 columnas */
+  min-width: 200px; 
+  background-color: #e4b5b5;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  box-shadow: 0 10px 20px rgba(0,0,0, 0.20);
+}
+
 .item{
   flex: 1 1 calc(25% - 20px); /* 4 columnas */
   min-width: 200px; 
@@ -349,12 +413,15 @@ p {
 }
 
 
-
-.info-product{
+.info-produc{
   padding: 15px 30px;
 }
 
-.item img{
+.cards{
+  padding: 15px 30px;
+}
+
+.card img{
   width: 100%;
   height: 500px;
   object-fit: cover;
@@ -444,4 +511,45 @@ p {
   #banner2 {
     height: 300px;
   }
+}
+
+.tableProduct {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 40rem;
+
+  .table {
+    thead {
+      background-color: var(--primary-color);
+      color: var(--secondary-color)
+
+      tr th {
+        border-radius: 10px;
+        padding: 0.5rem;
+      }
+    }
+  
+
+    tbody {
+      background-color: var(--secondary-color);
+      color: var(--background-color);
+      font-weight: 500;
+
+     tr td {
+       border: 1px solid var(--background-color);
+        border-radius: 10px;
+        padding: 0.5rem;
+    }
+  }
+}
+
+p {
+  font-size: 1.2rem;
+  color: var(--dark-color);
+  font-weight: 600;
+  margin-top: 1rem;
+  text-align: end;
+}
 }
